avoid page break on empty divs in eoc

--- a/css/refactor/accounting.less
+++ b/css/refactor/accounting.less
@@ -79,6 +79,12 @@ div.part>div.titlepage {
  * Accounting EOC
  * ------------------------
  */
+ .cnx-eoc .section.empty {
+   page-break-inside: avoid;
+   page-break-after: avoid;
+   page-break-before: avoid;
+ }
+
 .section-summary > .section > .title {
   .scale-padding(-2, padding-top);
   .scale-padding(-6, padding-bottom);
